<resources>
    <string name="app_name">My Application</string>
    <string name="imageButton1">btnEmergency</string>
    <string name="imageButton2">btnCarabiners</string>
    <string name="imageButton3">btnHospital</string>
    <string name="imageButton4">btnContact</string>
    <string name="toolbarSubtitle">Botones de llamada</string>
    <string name="ajusteAccesibilidad">Ajustes Accesibilidad</string>
    <string name="ajusteContactos">Ajustes Contactos</string>
    <string name="labelBtnEmergency">labelBtnEmergency</string>
    <string name="activarSos">Activar SOS</string>
    <string name="contactoCarabineros">Contacto Carabineros</string>
    <string name="contactoHospital">Contacto Hospital</string>
    <string name="contactoEmergencia">Contacto Emergencia</string>
    <string name="revisarAccidentes">Revisar Accidentes</string>
    <string name="title_activity_ajustes_contactos">ajustesContactos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activar_sos">Activar SOS</string>
    <string name="carabineros">Carabineros</string>
    <string name="hospital">Hospital</string>
    <string name="contacto_emergencia">Contacto Emergencia</string>
    <string name="ajustes_accesibilidad">Ajustes Accesibilidad</string>
    <string name="ajustes_contactos">Ajustes Contactos</string>
    <string name="revisar_accidentes">Revisar Accidentes</string>
    <string name="preferido">Preferido</string>
    <string name="regresar">Regresar</string>
    <string name="favorito">Favorito</string>
    <string name="llamar">Llamar</string>
    <string name="add_contact">add_contact</string>
    <string name="add_report">add_report</string>
    <string name="editar">EDITAR</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="descripci_n_breve_del_reporte">Descripción breve del reporte</string>
    <string name="t_tulo_del_reporte">Título del Reporte</string>
    <string-array name="sensibilidad_opciones">
        <item>Sensible a caídas</item>
        <item>Sensible a golpes</item>
        <item>Sensible a agitación</item>
        <item>Equilibrado</item>
    </string-array>
</resources>